--- a/index.html
+++ b/index.html
@@ -11,8 +11,6 @@
 <body>
 <div id="container"></div>
 
-</body>
-</html>
 <script type="x-shader/x-vertex" id="vertexshader">
 
   attribute vec3 a_color;
@@ -46,7 +44,7 @@
 </script>
 
 <script src="lib/js/datgui/dat.gui.js"></script>
-<script src="lib/js/threejs/three.js"></script>
+<script src="lib/js/threejs/three.min.js"></script>
 <script src="lib/js/threejs/Detector.js"></script>
 
 <script src="lib/js/threejs/Stats.js"></script>
@@ -57,4 +55,7 @@
 
 <script src="lib/js/requirejs/require.js" data-main="js/bootstrap.js"></script>
 
+<a href="https://github.com/eskimoblood/superdupershape"><img style="position: absolute; top: 0; left: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_left_darkblue_121621.png" alt="Fork me on GitHub"></a>
 
+</body>
+</html>
